@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(activelearning)
 export(query_bagging)
 export(query_committee)
 export(query_oracle)
